<resources>
    <string name="app_name">RoyaleTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="new_order">New Order</string>
    <string name="review_order">Review Order</string>
    <string name="download_menu">Download Menu</string>
    <string name="call">Call</string>
    <string name="exit">Exit</string>
    <string name="title_activity_cart">My Cart</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="china_intro">china_intro</string>
    <string name="take_away">take_away</string>
    <string name="Royal_Palace">Royal Palace</string>
    <string name="choose_how_many">Choose how many</string>
    <string name="name_price"><![CDATA[Name & Price]]></string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="my_order">MY ORDER</string>
    <string name="_2">2</string>
    <string name="_14_99">14.99</string>
    <string name="meal_name">meal name</string>
    <string name="_9_99">9.99</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_preference">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="user_email">user email</string>
    <string name="send_order">Send Order</string>
    <string name="user_name">user name</string>
    <string name="user_address">user address</string>
    <string name="user_town">user town</string>
    <string name="user_phone">user phone</string>
    <string name="title_activity_settings">Settings</string>
    <string name="edit_details">Edit Details</string>
    <string name="proceed_to_order_or_edit_delivery_address">Proceed to Order or Edit Delivery Details</string>
    <string name="total_price_for_your_order_is">Total Price For Your Order Is</string>
    <string name="save_profile_and_proceed_to_order">Save profile and Proceed To Order</string>
    <string name="touch_field_to_edit_text">Touch Field To Edit Text</string>
    <string name="send_activity">Send activity</string>
    <string name="my_toolbar">my toolbar</string>
    <string name="author_contact_details">Author Contact Details</string>
    <string name="pref_ringtone_silent">silent</string>
    <string name="chinese_cuisine">chinese cuisine</string>
    <string name="_0_00">0.00</string>
    <string name="total2">Total €</string>
    <string name="choose_again">Choose Again</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delete_this_item">Delete this Item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="total_for_this_item">"Total for this item "</string>
</resources>
