<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:measureWithLargestChild="false"
    android:nestedScrollingEnabled="true"
    android:showDividers="middle|beginning|end">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/free_side_title"
        android:text="@string/take_away"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="15sp" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/free_side_amount"
    android:text="@string/_14_99"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:textSize="15sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:id="@+id/listView_free_side"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Side Orders Selected"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_content"
        android:id="@+id/side_ordered"
        android:minLines="4"
        android:textStyle="italic"
        android:paddingStart="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_again"
            android:id="@+id/side_list_button_back"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:id="@+id/side_list_button_add"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>

</LinearLayout>