<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/delete_this_item"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/order_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/author_contact_details"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:textStyle="italic"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_detail_free_side"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/order_detail_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/author_contact_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/cancel_detail_order_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/order_detail_trash_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>
</LinearLayout>