<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/proceed_to_order_or_edit_delivery_address"
    android:textStyle="bold"
    android:textSize="17sp"
    android:textColor="@color/light_header" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/user_name"
    android:text="user name"
    android:textSize="15sp"
    android:padding="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_address"
        android:text="user address"
        android:textSize="15sp"
        android:padding="15dp"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_town"
        android:text="user town"
        android:textSize="15sp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_phone"
        android:text="user phone"
        android:textSize="15sp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_email"
        android:text="user email"
        android:textSize="15sp"
        android:padding="15dp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_margin="15dp">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/user_send_button"
        android:text="@string/send_order"
        android:textSize="15sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/appbar_padding_top"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_user_btn"
        android:text="@string/edit_details"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/appbar_padding_top"/>

</LinearLayout>


</LinearLayout>